Fix clipping on small width

--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ body {
   color: var(--clr-white);
   font-family: var(--ff-base);
   font-size: 0.9375rem;
-  height: initial;
-  display: grid;
-  place-content: center;
+}
+
+main {
+  min-width: 375px;
 }
 
 /* Button */
@@ -98,7 +99,6 @@ body {
   overflow: hidden;
   display: grid;
   place-content: center;
-  min-width: 327px;
   max-width: 920px;
 }
 
@@ -136,6 +136,7 @@ body {
 @media (min-width: 800px) {
   body {
     height: 100vh;
+    display: grid;
     place-content: center;
   }
 
